--- a/src/BCad/BCad/Ribbons/HomeRibbon.xaml
+++ b/src/BCad/BCad/Ribbons/HomeRibbon.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
+<r:RibbonTab xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:IxMilia.BCad"
+             xmlns:r="clr-namespace:IxMilia.BCad.Ribbons"
              x:Class="IxMilia.BCad.Ribbons.HomeRibbon">
     <ContentView.Content>
         <StackLayout Orientation="Horizontal">
@@ -20,4 +21,4 @@
             </Grid>
         </StackLayout>
     </ContentView.Content>
-</ContentView>
+</r:RibbonTab>
